style changes - font, input

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
     background-color: rgb(43, 41, 44);
     display: flex;
     flex-flow: column;
+    font-family: 'Montserrat';
 }
 
 header {
@@ -21,18 +22,19 @@ header {
     display: flex;
     align-items: center;
     padding-left: 30px;
-    gap: 4px;
+    gap: 8px;
 }
 
-.header-search {
-    display: flex;
-}
-
-header input {
+#search {
     border: none;
-    margin-right: -1px;
+    border-radius: 5px;
+    margin-right: 32px;
     padding: 4px;
-    width: 100px;
+    width: 150px;
+}
+
+#search:focus{
+    outline-color: #cb2735;
 }
 
 header button {
@@ -51,7 +53,7 @@ header img {
     margin: 24px 0 24px 0;
     text-align: center;
     color: white;
-    font-size: 32px;
+    font-size: 30px;
 }
 
 .pokeball {
@@ -149,7 +151,8 @@ header img {
 .pokemonName {
     margin: 0;
     padding: 10px 0 0 14px;
-    font-size: 24px;
+    font-size: 22px;
+    font-weight: 600;
 }
 
 .pokemonInfo {
@@ -171,7 +174,7 @@ header img {
 #PokemonImg {
     height: 150px;
     object-fit: cover;
-    margin-left: -20px;
+    margin-left: -10px;
     margin-top: -8px;
     transition: transform .3s ease-in-out;
 }
@@ -196,10 +199,11 @@ header img {
 }
 
 .skip-img {
-    height: 50px;
-    width: 50px;
+    height: 40px;
+    width: 40px;
     object-fit: cover;
     cursor: pointer;
+    padding: 8px;
 }
 
 #singleCard {
@@ -299,17 +303,9 @@ header img {
     display: none;
 }
 
-@media(max-width: 375px) {
-    header button {
-        margin-right: 16px;
-    }
-
-    .header-left {
-        padding-left: 16px;
-    }
-
-    header input {
-        width: 70px
+@media(max-width: 420px) {
+    .title {
+        display: none;
     }
 }
 
@@ -410,9 +406,13 @@ header img {
 }
 
 @media(min-width: 1050px) {
+    #search{
+        width: 200px;
+    }
+    
     .skip-img {
-        height: 35px;
-        width: 35px;
+        height: 45px;
+        width: 45px;
     }
 
     #singleCard {
@@ -503,8 +503,8 @@ header img {
     }
 
     .skip-img {
-        height: 35px;
-        width: 35px;
+        height: 50px;
+        width: 50px;
         padding: 16px;
     }
 
